:recycle: refactor: Offsets of 가변인자로 변경